[gd_scene load_steps=11 format=2]

[ext_resource path="res://Vitrine Escolar.png" type="Texture" id=1]
[ext_resource path="res://BackGround 2.png" type="Texture" id=2]
[ext_resource path="res://Rolagem.gd" type="Script" id=3]
[ext_resource path="res://Logo Vitrine PB.png" type="Texture" id=4]
[ext_resource path="res://Data.gd" type="Script" id=5]
[ext_resource path="res://Dados.gd" type="Script" id=6]
[ext_resource path="res://Fotos/Ana Rosa/1.jpg" type="Texture" id=7]
[ext_resource path="res://estrela.png" type="Texture" id=8]
[ext_resource path="res://polica.png" type="Texture" id=9]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 462.969, 474.194 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1155.14 ]
}
destaque = 2

[node name="Fundo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -93.0
margin_bottom = 38.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="Fundo"]
anchor_left = 1.0
anchor_top = 0.113
anchor_right = 1.0
anchor_bottom = 0.955
margin_left = -26.0
margin_top = 60.837
margin_right = -1.0
margin_bottom = 0.295044
page = 10.0

[node name="Vitrine" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -562.0
margin_top = 250.0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
limites = Vector2( 250, -4096 )
salto = 20.0

[node name="Logo" type="TextureRect" parent="Vitrine"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -740.0
margin_top = -125.0
margin_right = 741.0
margin_bottom = 125.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="Vitrine/Logo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -155.5
margin_right = 168.5
margin_bottom = 257.0
flat = true

[node name="Data" type="Label" parent="Vitrine"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 357.799
margin_top = 17.4853
margin_right = 477.799
margin_bottom = 31.4853
rect_scale = Vector2( 2, 2 )
theme = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credenciais" type="Control" parent="Vitrine"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 356.0
margin_top = -175.0
margin_right = 518.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="LineEdit" parent="Vitrine/Credenciais"]
margin_right = 114.0
margin_bottom = 24.0
placeholder_text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Senha" type="LineEdit" parent="Vitrine/Credenciais"]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 48.0
secret = true
placeholder_text = "Senha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Vitrine/Credenciais"]
margin_left = 116.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 48.0
text = "OK"

[node name="Busca" type="Control" parent="Vitrine"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -511.0
margin_top = 158.0
margin_right = -572.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nome" type="LineEdit" parent="Vitrine/Busca"]
margin_left = 670.0
margin_right = 964.0
margin_bottom = 40.0
placeholder_text = "Buscar pelo nome..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="busc" type="Button" parent="Vitrine/Busca"]
margin_left = 968.0
margin_right = 596.0
margin_bottom = 40.0
text = "buscar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Vitrine/Busca"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alfa" type="Button" parent="Vitrine/Busca/HBoxContainer"]
margin_right = 123.0
margin_bottom = 40.0
text = "Pre-Alfabetização"

[node name="fun" type="Button" parent="Vitrine/Busca/HBoxContainer"]
margin_left = 127.0
margin_right = 277.0
margin_bottom = 40.0
text = "Ensino Fundamental I"

[node name="funn" type="Button" parent="Vitrine/Busca/HBoxContainer"]
margin_left = 281.0
margin_right = 436.0
margin_bottom = 40.0
text = "Ensino Fundamental II"

[node name="medio" type="Button" parent="Vitrine/Busca/HBoxContainer"]
margin_left = 440.0
margin_right = 538.0
margin_bottom = 40.0
text = "Ensino Médio"

[node name="prof" type="Button" parent="Vitrine/Busca/HBoxContainer"]
margin_left = 542.0
margin_right = 667.0
margin_bottom = 40.0
text = "Profissionalizante"

[node name="Quarry" type="Control" parent="Vitrine"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -511.0
margin_top = 200.0
margin_right = 512.0
margin_bottom = 1594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filtros" type="Control" parent="Vitrine/Quarry"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -514.5
margin_top = 2.0
margin_right = 275.5
margin_bottom = 143.0
rect_scale = Vector2( 1.3, 1.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Vitrine/Quarry/Filtros"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_right = 141.0
margin_bottom = 24.0
hint_tooltip = "Filtro"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Pre Alfabetização"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 28.0
margin_right = 141.0
margin_bottom = 52.0
text = "Fundamental I"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 56.0
margin_right = 141.0
margin_bottom = 80.0
text = "Fundamental II"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox4" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 84.0
margin_right = 141.0
margin_bottom = 108.0
text = "Médio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox5" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 112.0
margin_right = 141.0
margin_bottom = 136.0
text = "Profissionalizante"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer4" type="VBoxContainer" parent="Vitrine/Quarry/Filtros"]
margin_left = 200.0
margin_right = 341.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox5" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer4"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_right = 141.0
margin_bottom = 24.0
text = "EJA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer4"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 28.0
margin_right = 141.0
margin_bottom = 52.0
hint_tooltip = "Filtro"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Manhã"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer4"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 56.0
margin_right = 141.0
margin_bottom = 80.0
text = "Tarde"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer4"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 84.0
margin_right = 141.0
margin_bottom = 108.0
text = "Noite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox4" type="CheckBox" parent="Vitrine/Quarry/Filtros/VBoxContainer4"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 112.0
margin_right = 141.0
margin_bottom = 136.0
text = "Integral"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Vitrine/Quarry/Filtros"]
margin_left = 400.0
margin_top = 5.0
margin_right = 545.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Vitrine/Quarry/Filtros/VBoxContainer2"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_right = 145.0
margin_bottom = 14.0
text = "Ideb"

[node name="HSlider" type="HSlider" parent="Vitrine/Quarry/Filtros/VBoxContainer2"]
margin_top = 18.0
margin_right = 145.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Vitrine/Quarry/Filtros/VBoxContainer2"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 38.0
margin_right = 145.0
margin_bottom = 52.0
text = "Qualidade"

[node name="HSlider2" type="HSlider" parent="Vitrine/Quarry/Filtros/VBoxContainer2"]
margin_top = 56.0
margin_right = 145.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Vitrine/Quarry/Filtros/VBoxContainer2"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 76.0
margin_right = 145.0
margin_bottom = 90.0
text = "Segurança"

[node name="HSlider3" type="HSlider" parent="Vitrine/Quarry/Filtros/VBoxContainer2"]
margin_top = 94.0
margin_right = 145.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="Vitrine/Quarry/Filtros"]
margin_left = 600.0
margin_top = 5.0
margin_right = 762.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Vitrine/Quarry/Filtros/VBoxContainer3"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_right = 162.0
margin_bottom = 14.0
text = "Ordenar"

[node name="Label2" type="Label" parent="Vitrine/Quarry/Filtros/VBoxContainer3"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_top = 18.0
margin_right = 162.0
margin_bottom = 32.0
text = "Página"

[node name="Home" type="Control" parent="Vitrine"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -511.0
margin_top = 200.0
margin_right = 512.0
margin_bottom = 799.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Escola" type="Control" parent="Vitrine/Home"]
margin_right = 1022.0
margin_bottom = 398.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foto" type="TextureRect" parent="Vitrine/Home/Escola"]
margin_right = 400.0
margin_bottom = 400.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[node name="Escola" type="Button" parent="Vitrine/Home/Escola"]
modulate = Color( 0.0705882, 0.0627451, 0.843137, 1 )
margin_left = 404.0
margin_right = 712.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
text = "ESCOLA"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" type="RichTextLabel" parent="Vitrine/Home/Escola"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 417.0
margin_top = 88.0
margin_right = 1018.0
margin_bottom = 597.0
text = "fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasd oghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhba gáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioa sdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasd oghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioasdoghaosd fadfasdfpjnhba gáos dihgioasdoghaosd fadfasdfpjnhbagáos dihgioaosd fadfasdfpjnhbagáos dih"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Qualidade" type="Control" parent="Vitrine/Home/Escola"]
margin_left = 550.0
margin_top = 40.0
margin_right = 590.0
margin_bottom = 80.0
rect_scale = Vector2( 0.04, 0.04 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Vitrine/Home/Escola/Qualidade"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="Vitrine/Home/Escola/Qualidade"]
margin_left = 650.265
margin_right = 1290.27
margin_bottom = 640.0
texture = ExtResource( 8 )

[node name="TextureRect3" type="TextureRect" parent="Vitrine/Home/Escola/Qualidade"]
margin_left = 1303.53
margin_right = 1943.53
margin_bottom = 640.0
texture = ExtResource( 8 )

[node name="Qualidade2" type="Control" parent="Vitrine/Home/Escola"]
margin_left = 800.0
margin_top = 40.0
margin_right = 840.0
margin_bottom = 80.0
rect_scale = Vector2( 0.04, 0.04 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Vitrine/Home/Escola/Qualidade2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="Vitrine/Home/Escola/Qualidade2"]
margin_left = 650.265
margin_right = 1290.27
margin_bottom = 640.0
texture = ExtResource( 8 )

[node name="TextureRect3" type="TextureRect" parent="Vitrine/Home/Escola/Qualidade2"]
margin_left = 1303.53
margin_right = 1943.53
margin_bottom = 640.0
texture = ExtResource( 8 )

[node name="Seguranca" type="Control" parent="Vitrine/Home/Escola"]
margin_left = 673.0
margin_top = 40.0
margin_right = 713.0
margin_bottom = 80.0
rect_scale = Vector2( 0.05, 0.05 )

[node name="TextureRect" type="TextureRect" parent="Vitrine/Home/Escola/Seguranca"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="Vitrine/Home/Escola/Seguranca"]
margin_left = 516.239
margin_right = 1028.24
margin_bottom = 512.0
texture = ExtResource( 9 )

[node name="TextureRect3" type="TextureRect" parent="Vitrine/Home/Escola/Seguranca"]
margin_left = 1036.13
margin_right = 1548.13
margin_bottom = 512.0
texture = ExtResource( 9 )

[node name="School" type="Control" parent="Vitrine"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -511.0
margin_top = 200.0
margin_right = 512.0
margin_bottom = 799.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
margin_right = -1240.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_right = 49.0
margin_bottom = 31.0
text = "Voltar"

[node name="Button2" type="Button" parent="Control"]
margin_left = 52.0
margin_right = 131.0
margin_bottom = 31.0
text = "Recarregar"

[node name="TextEdit" type="TextEdit" parent="Control"]
margin_left = 135.0
margin_right = 897.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Vitrine/Logo/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Vitrine/Busca/busc" to="." method="_on_busc_pressed"]
[connection signal="pressed" from="Vitrine/Busca/HBoxContainer/alfa" to="." method="_on_alfa_pressed"]
[connection signal="pressed" from="Vitrine/Busca/HBoxContainer/fun" to="." method="_on_fun_pressed"]
[connection signal="pressed" from="Vitrine/Busca/HBoxContainer/funn" to="." method="_on_funn_pressed"]
[connection signal="pressed" from="Vitrine/Busca/HBoxContainer/medio" to="." method="_on_medio_pressed"]
[connection signal="pressed" from="Vitrine/Busca/HBoxContainer/prof" to="." method="_on_prof_pressed"]
